--- a/discussion.tex
+++ b/discussion.tex
@@ -213,7 +213,7 @@ The value of \DeltaTheta\ decreases in more peripheral collisions and the \ptjet
 	 \includegraphics[width=0.5\textwidth]{figures/main/results/RDpT_lowpt_integ_cent5.pdf} &
 	 \includegraphics[width=0.5\textwidth]{figures/main/results/RDpT_jetshape_cent5.pdf} \\
 \end{tabular} }
-   \caption{\RTheta\ (left) and \RP\ (right) as a function of \rvar\ in central collisions for charged-particles with \pt\ < 4 GeV ranges in four \ptjet\ selections: 126--158~\GeV, 158--200~\GeV, 200--251~\GeV, and 251--316~\GeV and three centrality selections: 0--10\% (top), 30--40\% (middle) and 60--80\% (bottom). The vertical bars on the data points indicate statistical uncertainties while the shaded boxes indicate systematic uncertainties. The widths of the boxes are not indicative of the bin size and the points are shifted horizontally for better visibility. }
+   \caption{\RTheta\ (left) and \RP\ (right) as a function of \rvar\ in central collisions for charged-particles with $\pt\ < 4$ GeV ranges in four \ptjet\ selections: 126--158~\GeV, 158--200~\GeV, 200--251~\GeV, and 251--316~\GeV and three centrality selections: 0--10\% (top), 30--40\% (middle) and 60--80\% (bottom). The vertical bars on the data points indicate statistical uncertainties while the shaded boxes indicate systematic uncertainties. The widths of the boxes are not indicative of the bin size and the points are shifted horizontally for better visibility. }
       \label{fig:RPRT}
 \end{figure}
 
