--- a/macros.tex
+++ b/macros.tex
@@ -7,6 +7,21 @@
 \newcommand{\DeltaDptr}{\mbox{$\Delta\Dptr$}}
 
 
+\newcommand{\EM}{\mbox{\text{EM}}}
+\newcommand{\HI}{\mbox{\text{HI}}}
+
+\newcommand{\ptEM}{\mbox{$p_{\mathrm{T}}^{\mathrm{EM}}$}}
+\newcommand{\ptHI}{\mbox{$p_{\mathrm{T}}^{\mathrm{HI}}$}}
+\newcommand{\REM}{\mbox{$R_{\mathrm{EM}}$}}
+\newcommand{\RHI}{\mbox{$R_{\mathrm{HI}}$}}
+\newcommand{\sEM}{\mbox{$s_{\mathrm{EM}}$}}
+\newcommand{\sHI}{\mbox{$s_{\mathrm{HI}}$}}
+\newcommand{\deltaEM}{\mbox{$\Delta_{\mathrm{EM}}$}}
+\newcommand{\deltaHI}{\mbox{$\Delta_{\mathrm{HI}}$}}
+
+
+
+
 \newcommand{\pttrkreco}{\mbox{$p_{{\mathrm{T}}}^{\mathrm{trk,reco}}$}}
 \newcommand{\Dptrmeas}{\mbox{$D^{\mathrm{meas}}(\pT,r)$}}
 \newcommand{\Dptrsub}{\mbox{$D^{\mathrm{sub}}(\pT,r)$}}
