--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -15,7 +15,7 @@ SLACcitation   = "%%CITATION = CERN-LHCC-2010-013;%%"
 @unpublished{Christiane:1260465,
 author        = "Christiane Lefevre",
 title         = "{The CERN accelerator complex}",
-month         = "Dec",
+month         = "12",
 year          = "2008",
 reportNumber  = "CERN-DI-0812015",
 nourl           = "https://cds.cern.ch/record/1260465",
@@ -25,7 +25,7 @@ nourl           = "https://cds.cern.ch/record/1260465",
 	nodoi = {10.1088/1748-0221/3/08/s08001},
 	nourl = {https://doi.org/10.1088\%2F1748-0221\%2F3\%2F08\%2Fs08001},
 	year = 2008,
-	month = {aug},
+	month = {8},
 	publisher = {{IOP} Publishing},
 	volume = {3},
 	number = {08},
@@ -82,7 +82,7 @@ nourl           = "https://cds.cern.ch/record/1260465",
   pages = {034914},
   numpages = {28},
   year = {2016},
-  month = {Mar},
+  month = {3},
   publisher = {American Physical Society},
   nodoi = {10.1103/PhysRevC.93.034914},
   nourl = {https://link.aps.org/doi/10.1103/PhysRevC.93.034914}
@@ -94,7 +94,7 @@ author="Hulcher, Zachary and others",
 title="Resolution effects in the hybrid strong/weak coupling model",
 journal="Journal of High Energy Physics",
 year="2018",
-month="Mar",
+month="3",
 day="05",
 volume="2018",
 number="3",
@@ -112,7 +112,7 @@ and Barate et al., R.",
 title="Measurements of the structure of quark and gluon jets in hadronic Z decays",
 journal="The European Physical Journal C - Particles and Fields",
 year="2000",
-month="Oct",
+month="10",
 day="01",
 volume="17",
 number="1",
@@ -1014,7 +1014,7 @@ reconstruction: JES for HI jets}",
 institution   = "CERN",
 address       = "Geneva",
 number        = "ATL-COM-PHYS-2014-329",
-month         = "Apr",
+month         = "4",
 year          = "2014",
 reportNumber  = "ATL-COM-PHYS-2014-329",
 nourl           = "https://cds.cern.ch/record/1696485",
@@ -1045,7 +1045,7 @@ nourl           = "https://cds.cern.ch/record/1696485",
       collaboration = "ATLAS Collaboration",
       address       = "Geneva",
       number        = "ATLAS-CONF-2017-012",
-      month         = "Feb",
+      month         = "2",
       year          = "2017",
       reportNumber  = "ATLAS-CONF-2017-012",
       nourl           = "https://cds.cern.ch/record/2244824",
@@ -1156,7 +1156,7 @@ SLACcitation   = "%%CITATION = ATLAS-CONF-2013-083;%%"
       institution   = "CERN",
       address       = "Geneva",
       number        = "ATL-COM-PHYS-2017-375",
-      month         = "Apr",
+      month         = "4",
       year          = "2017",
       reportNumber  = "ATL-COM-PHYS-2017-375",
       nourl           = "https://cds.cern.ch/record/2259091",
@@ -1169,7 +1169,7 @@ SLACcitation   = "%%CITATION = ATLAS-CONF-2013-083;%%"
       institution   = "CERN",
       address       = "Geneva",
       number        = "ATL-COM-PHYS-2010-139",
-      month         = "Mar",
+      month         = "3",
       year          = "2010",
       reportNumber  = "ATL-COM-PHYS-2010-139",
       nourl           = "https://cds.cern.ch/record/1248716",
@@ -1185,7 +1185,7 @@ issue = {2},
 pages = {024908},
 numpages = {34},
 year = {2018},
-month = {Aug},
+month = {8},
 publisher = {American Physical Society},
 nodoi = {10.1103/PhysRevC.98.024908},
 nourl = {https://link.aps.org/doi/10.1103/PhysRevC.98.024908}
@@ -1243,7 +1243,7 @@ TeV Pb+Pb collision data in 2015}",
 institution   = "CERN",
 address       = "Geneva",
 number        = "ATL-COM-PHYS-2016-1287",
-month         = "Sep",
+month         = "9",
 year          = "2016",
 reportNumber  = "ATL-COM-PHYS-2016-1287",
 nourl           = "https://cds.cern.ch/record/2212936",
@@ -1268,7 +1268,7 @@ application to 2015 heavy ion jets}",
 institution   = "CERN",
 address       = "Geneva",
 number        = "ATL-COM-PHYS-2016-1253",
-month         = "Aug",
+month         = "8",
 year          = "2016",
 reportNumber  = "ATL-COM-PHYS-2016-1253",
 nourl           = "https://cds.cern.ch/record/2211758",
@@ -1290,7 +1290,7 @@ nourl           = "https://cds.cern.ch/record/2211758",
       institution   = "CERN",
       address       = "Geneva",
       number        = "ATL-COM-PHYS-2016-828",
-      month         = "Jun",
+      month         = "6",
       year          = "2016",
       reportNumber  = "ATL-COM-PHYS-2016-828",
       nourl           = "https://cds.cern.ch/record/2194917",
