--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -9,10 +9,13 @@
 %% 
 \newcommand*{\ATLASLATEXPATH}{latex/}
 %\documentclass[PAPER, atlasdraft=true, texlive=2016, UKenglish, coverpage, PAPER]{\ATLASLATEXPATH atlasdoc}
+\RequirePackage{lineno}
+\linenumbers
 \documentclass[fullpage, UKenglish]{uiucthesis2009}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{pdfpages}
 %\usepackage[caption=false]{subfig}
 \usepackage{placeins}
 \usepackage[utf8]{inputenc}
@@ -20,12 +23,7 @@
 \usepackage[backend=bibtex]{\ATLASLATEXPATH atlaspackage}
 \usepackage{\ATLASLATEXPATH atlasbiblatex}
 
-%\usepackage[
-%    backend=bibtex,
-%	citestyle=numeric-comp,
-%	refsegment=section,
-%	sorting=none
-%]{biblatex}
+
 \usepackage{hyperref}
 \usepackage{booktabs}
 \usepackage{subcaption}
@@ -116,70 +114,46 @@ For my Mother, Father, and Brother
 
 \mainmatter
 %-------------------------------------------------------------------------------
-
-\chapter{Introduction}
-\label{sec:intro}
-\input{thesisintro.tex}
-
-\chapter{Experimental Setup}
-\label{sec:setup}
-\input{setup.tex}
-
-%\chapter{Theoretical Introduction}
-%\label{sec:theory}
-%\input{theory.tex}
-
-\chapter{ATLAS Qualification Task}
-\label{sec:qualification}
-\input{qualification.tex}
-
-%\chapter{Important Jet Measurements}
-%\label{sec:jetMeasurements}
-%\input{jetMeasurements.tex}
-
-
-\chapter{Measurement of Angular Correlations Between Tracks And Jets}
-\label{sec:mainanalysis}
-\input{mainAnalysis.tex}
-
-%\section{Overview}
-
-%\input{overview.tex}
-
-%\section{Data Sets}
-%\label{sec:data}
-%\input{data.tex}
-
-%\section{Trigger and Event Selection}
-%\label{sec:event}
-%\input{event.tex}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\section{Jet Selection and Reconstruction Performance}
-%\label{sec:reconstruction}
-%\input{reconstruction.tex}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\section{Analysis Procedure}
-%\label{sec:analysis}
-%\input{analysis.tex}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\section{Systematic Uncertainties}
-%\label{sec:systematics}
-%\input{systematics.tex}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\section{Results}
-%\label{sec:results}
-%\input{results.tex}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\chapter{Summary}
-%\label{sec:summary}
-%\input{summary.tex}
-%\clearpage
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\chapter{Introduction}
+%\label{sec:intro}
+%\input{thesisintro.tex}
+%
+%\chapter{Experimental Setup}
+%\label{sec:setup}
+%\input{setup.tex}
+%
+%%\chapter{Theoretical Introduction}
+%%\label{sec:theory}
+%%\input{theory.tex}
+%
+%\chapter{ATLAS Qualification Task}
+%\label{sec:qualification}
+%\input{qualification.tex}
+%
+%%\chapter{Important Jet Measurements}
+%%\label{sec:jetMeasurements}
+%%\input{jetMeasurements.tex}
+%
+%\chapter{Measurement of Angular Correlations Between Tracks And Jets}
+%\label{sec:mainanalysis}
+%\input{mainAnalysis.tex}
+%
 \appendix
 \chapter{HI JER Uncertainty}
 \label{sec:appendix_hijerDerivation}
 \input{appendixHIJERDerivation.tex}
 \clearpage
+
+
+
+
+
+
+
+
+
+
 %\chapter{Data Sets}
 %\label{sec:appendixdata}
 %\input{appendixZ.tex}
