--- a/qualification.tex
+++ b/qualification.tex
@@ -87,11 +87,12 @@ Events in data were selected based on the trigger $\eta-\phi$ map given in  Fig.
     \caption{}
     \label{fig:trigmap_b}
 \end{subfigure}\hfill
-   \caption{The jet selection criteria in data based on different triggers. \protect\subref{fig:trigmap_a} $\pT-\eta$ phase space for different trigger regions used in the ZeroBias and express streams \protect\subref{fig:trigmap_b}The effect of the GSC calibration, as a function of the electromagnetic fraction (emf) of the jet. The peak at high emf is indicative of photons }
+   \caption{The jet selection criteria in data based on different triggers. \protect\subref{fig:trigmap_a} $\pT-\eta$ phase space for different trigger regions used in the ZeroBias and express streams. \protect\subref{fig:trigmap_b}The effect of the GSC calibration, as a function of the electromagnetic fraction (emf) of the jet. The peak at high emf is indicative of photons }
 \label{fig:TrigMap}
 \end{figure}
-
-Furthermore, events firing the HLT\_j360 trigger were vetoed if they also fired the HLT\_noalg\_L1J400, HLT\_g120\_loose, or the HLT\_g140\_loose. This was done to ensure that the jets entering the study were not in the wide turn on region of the aforementioned triggers. This also helped exclude photons (as can be seen in ~\ref{selection_2}.
+
+
+Furthermore, events firing the HLT\_j360 trigger were vetoed if they also fired the HLT\_noalg\_L1J400, HLT\_g120\_loose, or the HLT\_g140\_loose. This was done to ensure that the jets entering the study were not in the wide turn on region of the aforementioned triggers. This also helped exclude photons (as can be seen in ~\ref{fig:trigmap_b}.
 
 
 MC events were filtered based on pileup. The MC generation settings included an average of combined 2015-2016 pileup profiles \cite{twiki_MC15c}. This can be seen in the top plot of Fig.~\ref{fig:mu_weight}, where the $\mu$ distribution in MC has a very wide spread, whereas the data (purely 2015) is localized around a central value. Events with $7 < \mu < 18$ were selected, and the jet $\pT$ in MC was weighted with the ratio $\mu_{\mathrm{Data}}/\mu_{\mathrm{MC}}$ (in addition to the eventweight present in JZXW MC samples).
@@ -147,7 +148,7 @@ AntiKt4(EMTopo+HI) & 0.4\\
 
 The results presented here were performed using the ATLAS detector and calorimeter systems ~\cite{Aad:2008zzm}. Jets with a radius of $R=0.4$ were reconstructed using the \\antikt \ algorithm.  The specifics of this procedure as applied to reconstruct the standard EMTopo jets and the HI jets are described in detail in \cite{Aad:2011he} and \cite{Aad:hi_jets} respectively. A brief summary is given below.
 
-The EMTopo jets reconstruction involves using topological clusters of energy deposits in the calorimeter (calorimeter description in ~\cite{Aad:2008zzm}). The \\antikt \ algorithm \cite{Cacciari:2008gp}, as implemented in the FastJet sofware package \cite{fastjet_algo} is applied to these clusters, to reconstruct EMTopo jets with a $R = 0.4$.  The background in these jets, coming from the pile-up, is reduced by applying a $\pT$ and jet area dependent subtraction \cite{pp_pileup_subtr}. The jets are then calibrated using a energy and $\eta$ dependent calibration factor, derived from MC studies. The EMTopo jets for this study were calibrated up to MC based EtaJES, as described in \cite{CalibReco}.
+The EMTopo jets reconstruction involves using topological clusters of energy deposits in the calorimeter (calorimeter description in ~\cite{Aad:2008zzm}). The \antikt\ algorithm \cite{Cacciari:2008gp}, as implemented in the FastJet sofware package \cite{fastjet_algo} is applied to these clusters, to reconstruct EMTopo jets with a $R = 0.4$.  The background in these jets, coming from the pile-up, is reduced by applying a $\pT$ and jet area dependent subtraction \cite{pp_pileup_subtr}. The jets are then calibrated using a energy and $\eta$ dependent calibration factor, derived from MC studies. The EMTopo jets for this study were calibrated up to MC based EtaJES, as described in \cite{CalibReco}.
 
 The HI jet reconstruction also uses the anti-$k_{T}$ algorithm, but the inputs are $\Deta \times \Dphi = 0.1 \times \frac{\pi}{32}$ logical towers, deriving from the energy deposited in calorimeter cells. A fundamental difference between the reconstruction algorithms is how the underlying event (UE) is dealt with. The UE subtraction procedure involves the UE average tranvserse energy density ($\rho$), and the magnitude ($\nu_{2}$) and phase ($\Psi_{2}$) of the elliptic modulation from to flow. The subtraction applied to each cell within the jet is given as: 
 \begin{align}
@@ -208,7 +209,7 @@ A ratio of the EMTopo and HI jets, selected as described in Section~\ref{sec:qua
 \end{figure}
 
 
-The cross calibration factors, obtained by taking a ratio of the above relative response plots, were fit to a polynomial in log [$c_0 + c_1 \log(x) + c_2( \log(x))^2$] and are shown in Fig.~\ref{fig:cc_factors}. A ratio of the data to the fits is shown in Fig.~\ref{subfig:data2fit}.
+The cross calibration factors, obtained by taking a ratio of the above relative response plots, were fit to a polynomial in log [$c_0 + c_1 \log(x) + c_2( \log(x))^2$] and are shown in Fig.~\ref{fig:cc_factors}. A ratio of the data to the fits is shown in Fig.~\ref{fig:cc_factors}.
 
 
 \begin{figure}[h]
