added qcd theory section

--- a/macros.tex
+++ b/macros.tex
@@ -5,7 +5,7 @@
 \newcommand{\RP}{$R_{P(\rvar)}$}
 \newcommand{\RTheta}{$R_{\Theta(\rvar)}$}
 \newcommand{\DeltaDptr}{\mbox{$\Delta\Dptr$}}
-
+\newcommand{\alphas}{$\alpha_s$}
 
 \newcommand{\EM}{\mbox{\text{EM}}}
 \newcommand{\HI}{\mbox{\text{HI}}}
