--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,6 +1,274 @@
-% !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
+@article{Gaillard:1998ui,
+      author         = "Gaillard, Mary K. and Grannis, Paul D. and Sciulli, Frank
+                        J.",
+      title          = "{The Standard model of particle physics}",
+      journal        = "Rev. Mod. Phys.",
+      volume         = "71",
+      year           = "1999",
+      pages          = "S96-S111",
+      doi            = "10.1103/RevModPhys.71.S96",
+      eprint         = "hep-ph/9812285",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SUNY-SB-PHYS-98-007",
+      SLACcitation   = "%%CITATION = HEP-PH/9812285;%%"
+}
 
+@article{Abramowicz:2010ke,
+      author         = "{ZEUS Collaboration}",
+      title          = "{Inclusive-jet cross sections in NC DIS at HERA and a
+                        comparison of the kT, anti-kT and SIScone jet algorithms}",
+      collaboration  = "ZEUS",
+      journal        = "Phys. Lett.",
+      volume         = "B691",
+      year           = "2010",
+      pages          = "127-137",
+      doi            = "10.1016/j.physletb.2010.06.015",
+      eprint         = "1003.2923",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-10-034",
+      SLACcitation   = "%%CITATION = ARXIV:1003.2923;%%"
+}
+@article{Abramowicz:2010cka,
+      author         = "{ZEUS Collaboration}",
+      title          = "{Inclusive dijet cross sections in neutral current deep
+                        inelastic scattering at HERA}",
+      collaboration  = "ZEUS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C70",
+      year           = "2010",
+      pages          = "965-982",
+      doi            = "10.1140/epjc/s10052-010-1504-2",
+      eprint         = "1010.6167",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-10-170",
+      SLACcitation   = "%%CITATION = ARXIV:1010.6167;%%"
+}
+@article{Chekanov:2008af,
+      author         = "{ZEUS Collaboration}",
+      title          = "{Multi-jet cross-sections in charged current $e^\pm p$
+                        scattering at HERA}",
+      collaboration  = "ZEUS",
+      journal        = "Phys. Rev.",
+      volume         = "D78",
+      year           = "2008",
+      pages          = "032004",
+      doi            = "10.1103/PhysRevD.78.032004",
+      eprint         = "0802.3955",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-08-024",
+      SLACcitation   = "%%CITATION = ARXIV:0802.3955;%%"
+}
+@article{Chekanov:2007pa,
+      author         = "{ZEUS Collaboration}",
+      title          = "{Forward-jet production in deep inelastic $ep$ scattering
+                        at HERA}",
+      collaboration  = "ZEUS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C52",
+      year           = "2007",
+      pages          = "515-530",
+      doi            = "10.1140/epjc/s10052-007-0418-0",
+      eprint         = "0707.3093",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-07-100",
+      SLACcitation   = "%%CITATION = ARXIV:0707.3093;%%"
+}
+@article{Aaron:2007xx,
+      author         = "{H1 Collaboration}",
+      title          = "{Three- and Four-jet Production at Low $x$ at HERA}",
+      collaboration  = "H1",
+      journal        = "Eur. Phys. J.",
+      volume         = "C54",
+      year           = "2008",
+      pages          = "389-409",
+      doi            = "10.1140/epjc/s10052-008-0544-3",
+      eprint         = "0711.2606",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-07-200",
+      SLACcitation   = "%%CITATION = ARXIV:0711.2606;%%"
+}
+
+@article{Aaron:2009vs,
+      author         = "{H1 Collaboration}",
+      title          = "{Jet Production in ep Collisions at High $Q^2$ and
+                        Determination of $\alpha_s$}",
+      collaboration  = "H1",
+      journal        = "Eur. Phys. J.",
+      volume         = "C65",
+      year           = "2010",
+      pages          = "363-383",
+      doi            = "10.1140/epjc/s10052-009-1208-7",
+      eprint         = "0904.3870",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "DESY-09-032, DESY09-032",
+      SLACcitation   = "%%CITATION = ARXIV:0904.3870;%%"
+}
+
+@article{Alekhin:2012ig,
+      author         = "Alekhin, S. and Blumlein, J. and Moch, S.",
+      title          = "{Parton Distribution Functions and Benchmark Cross
+                        Sections at NNLO}",
+      journal        = "Phys. Rev.",
+      volume         = "D86",
+      year           = "2012",
+      pages          = "054009",
+      doi            = "10.1103/PhysRevD.86.054009",
+      eprint         = "1202.2281",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-12-023, DO-TH-11-31, LPN-12-033, SFB-CPP-12-08",
+      SLACcitation   = "%%CITATION = ARXIV:1202.2281;%%"
+}
+@article{Blumlein:2006be,
+      author         = "Blumlein, Johannes and Bottcher, Helmut and Guffanti,
+                        Alberto",
+      title          = "{Non-singlet QCD analysis of deep inelastic world data at
+                        $O(\alpha_s^3)$}",
+      journal        = "Nucl. Phys.",
+      volume         = "B774",
+      year           = "2007",
+      pages          = "182-207",
+      doi            = "10.1016/j.nuclphysb.2007.03.035",
+      eprint         = "hep-ph/0607200",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-05-012, SFB-CPP-06-33",
+      SLACcitation   = "%%CITATION = HEP-PH/0607200;%%"
+}
+
+@article{Alekhin:2013nua,
+      author         = "Alekhin, Sergey and Blumlein, Johannes and Moch,
+                        Sven-Olaf",
+      title          = "{ABM news and benchmarks}",
+      booktitle      = "{Proceedings, 21st International Workshop on
+                        Deep-Inelastic Scattering and Related Subjects (DIS 2013):
+                        Marseilles, France, April 22-26, 2013}",
+      journal        = "PoS",
+      volume         = "DIS2013",
+      year           = "2013",
+      pages          = "039",
+      doi            = "10.22323/1.191.0039",
+      eprint         = "1308.5166",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-13-149, DO-TH-13-21, SFB-CPP-13-58, LPN-13-057",
+      SLACcitation   = "%%CITATION = ARXIV:1308.5166;%%"
+}
+
+@article{Kataev:2001kk,
+      author         = "Kataev, A. L. and Parente, G. and Sidorov, A. V.",
+      title          = "{Improved fits to the $xF_3$ CCFR data at the
+                        next-to-next-to-leading order and beyond}",
+      journal        = "Phys. Part. Nucl.",
+      volume         = "34",
+      year           = "2003",
+      pages          = "20-46",
+      doi            = "10.1134/S1063779607060068",
+      note           = "[Erratum: Phys. Part. Nucl.38,no.6,827(2007)]",
+      eprint         = "hep-ph/0106221",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-2001-058",
+      SLACcitation   = "%%CITATION = HEP-PH/0106221;%%"
+}
+
+@article{RevModPhys.63.597,
+  title = {Deep inelastic scattering: Experiments on the proton and the observation of scaling},
+  author = {Kendall, Henry W.},
+  journal = {Rev. Mod. Phys.},
+  volume = {63},
+  issue = {3},
+  pages = {597--614},
+  numpages = {0},
+  year = {1991},
+  month = {7},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.63.597},
+  nourl = {https://link.aps.org/doi/10.1103/RevModPhys.63.597}
+}
+
+
+@article{Altarelli:1996nm,
+      author         = "Altarelli, Guido and others",
+      title          = "{Determination of the Bjorken sum and strong coupling
+                        from polarized structure functions}",
+      journal        = "Nucl. Phys.",
+      volume         = "B496",
+      year           = "1997",
+      pages          = "337-357",
+      doi            = "10.1016/S0550-3213(97)00201-0",
+      eprint         = "hep-ph/9701289",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-96-345, DFTT-77-96, EDINBURGH-96-29,
+                        GEF-TH-22-96",
+      SLACcitation   = "%%CITATION = HEP-PH/9701289;%%"
+}
+
+@article{Kim:1998kia,
+      author         = "Kim, J. H. and others",
+      title          = "{A Measurement of $\alpha_s (Q^2)$ from the Gross-Llewellyn
+                        Smith sum rule}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "81",
+      year           = "1998",
+      pages          = "3595-3598",
+      doi            = "10.1103/PhysRevLett.81.3595",
+      eprint         = "hep-ex/9808015",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/9808015;%%"
+}
+
+@article{Deur:2014vea,
+      author         = "Deur, A. and Prok, Y. and Burkert, V. and Crabb, D. and
+                        Girod, F. -X. and Griffioen, K. A. and Guler, N. and Kuhn,
+                        S. E. and Kvaltine, N.",
+      title          = "{High precision determination of the $Q^2$ evolution of
+                        the Bjorken Sum}",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
+      year           = "2014",
+      number         = "1",
+      pages          = "012009",
+      doi            = "10.1103/PhysRevD.90.012009",
+      eprint         = "1405.7854",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "JLAB-PHY-14-1887",
+      SLACcitation   = "%%CITATION = ARXIV:1405.7854;%%"
+}
+
+@article{Beringer:1481544,
+      author        = "Beringer, J and Arguin, J F and Barnett, R M and Copic, K and Dahl, O and Groom, D E and Lin, C J and Lys, J",
+      title         = "{Review of Particle Physics, 2012-2013. Review of Particle
+                       Properties}",
+      journal       = "Phys. Rev. D",
+      collaboration = "Particle Data Group. Berkeley",
+      number        = "1",
+      volume        = "86",
+      pages         = "010001",
+      year          = "2012",
+      nourl           = "http://cds.cern.ch/record/1481544",
+      doi           = "10.1103/PhysRevD.86.010001",
+}
+
+
+@article{Chyla:2004zz,
+      author         = "Chyla, Jiri",
+      title          = "{Quarks, partons and Quantum Chromodynamics}",
+      year           = "2004",
+      reportNumber   = "PRA-HEP-04-01",
+      SLACcitation   = "%%CITATION = PRA-HEP-04-01;%%"
+}
 
 @techreport{Capeans:1291633,
 author        = "{ATLAS Collaboration}",
