--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -16,7 +16,8 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{pdfpages}
-%\usepackage[caption=false]{subfig}
+\usepackage{amsmath}
+\usepackage{slashed}
 \usepackage{placeins}
 \usepackage[utf8]{inputenc}
 
@@ -114,35 +115,36 @@ For my Mother, Father, and Brother
 
 \mainmatter
 %-------------------------------------------------------------------------------
-%
+
 %\chapter{Introduction}
 %\label{sec:intro}
 %\input{thesisintro.tex}
 %
+
+\chapter{Theoretical Introduction}
+\label{sec:theory}
+\input{theory.tex}
+
+%\chapter{Important Jet Measurements}  %all about Jets ? include jet measurements, jet reco (take it out from main analysis)
+%\label{sec:jetMeasurements}
+%\input{jetMeasurements.tex}
+
 %\chapter{Experimental Setup}
 %\label{sec:setup}
 %\input{setup.tex}
-%
-%%\chapter{Theoretical Introduction}
-%%\label{sec:theory}
-%%\input{theory.tex}
-%
+
 %\chapter{ATLAS Qualification Task}
 %\label{sec:qualification}
 %\input{qualification.tex}
-%
-%%\chapter{Important Jet Measurements}
-%%\label{sec:jetMeasurements}
-%%\input{jetMeasurements.tex}
 %
 %\chapter{Measurement of Angular Correlations Between Tracks And Jets}
 %\label{sec:mainanalysis}
 %\input{mainAnalysis.tex}
 %
-\appendix
-\chapter{HI JER Uncertainty}
-\label{sec:appendix_hijerDerivation}
-\input{appendixHIJERDerivation.tex}
+%\appendix
+%\chapter{HI JER Uncertainty}
+%\label{sec:appendix_hijerDerivation}
+%\input{appendixHIJERDerivation.tex}
 \clearpage
 
 
