added material for qgp section

--- a/qgp.tex
+++ b/qgp.tex
@@ -1,1 +1,23 @@
 % !TEX root = thesis-ex.tex
+
+The quark gluon plasma is a strongly coupled medium \cite{} that is produced in a heavy ion collision. This section will briefly describe the heavy ion environment it is formed in and subsequently the medium itself. 
+
+In a heavy ion collision, each incident nucleus is a lorentz contracted disc. In the case of a \pbpb\ collision, the nuclei have been accelerated to energies where the relativistic $\gamma$ factor is between 100 and 2500 for beam rapidities of $y = 5.3$ and 8.5. 
+%The partons within each nucleons are sources of transverse color fields
+
+When these pancake like discs collide, most of the partons are participate in soft interactions that do not involve large transverse momentum transfer, and are hence scattered only at small angles. A small fraction of the colliding partons however do undergo hard perturbative interactions and lead to particles with large transverse momenta.
+
+While the maximum energy density in the process occurs just at the collision, the energy density 1 fm/c after the collision is 12 $\mathrm{GeV} / \mathrm{fm}^3$, much higher than the 500 $\mathrm{MeV} / \mathrm{fm}^3$ in a typical hadron. Lattice QCD calculations in thermodynamics show that at these energies, the partons produced in the collision cannot be treated as a collection of distinct hadrons. In fact, these partons are strongly coupled to each other \cite{} , forming a medium that can be described by relativistic hydrodynamics. This medium, called the quark gluon plasma (QGP) has a viscosity to entropy ratio that is almost at the theoretical minimum of of $\eta / S = 1/4\pi$ \cite{}. 
+
+After the collision and as the nuclei are receding from each other, the energy density between them starts to decrease as the QGP cools and expands. This process can be seen in Figure~\ref{fig:qgp_form}. Once formed, the QGP hydrodynamically flows, with the initial pressure driving the expansion and the subsequent cooling. This continues till the energy density drops to below that within a hadron and the fluid hadronizes. These individual hadrons briefly scatter off of each other before they freely fly towards the detector (freezeout).
+% It is to be noted that there is QGP continuously formed in the wake of the nuclei since the partons produced at large rapidities are highly relativistic and 
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=0.85\textwidth]{figures/theory/qgp_formation}
+\caption{(left) Space-time diagram for a heavy ion collision. The color is indicative of the temperature of the QGP formed. (right) Snapshots of a heavy ion collision at $\sqrtsnn = 2.76$ TeV at different times. The Lorentz contracted nuclei are in blue while the QGP is in red. Figures from Reference \cite{}.  }
+\label{fig:qgp_form}
+\end{center}
+\end{figure}
+
+While Figure~\ref{fig:qgp_form} shows snapshots of a head on (central) collision between two large nuclei, it is possible to have collisions where the impact paramter is larger and hence the overlap region is smaller. These collisions, called peripheral collisions, qualitatively undergo the same process described above, with the size and shape of the QGP being different. In these collisions, the QGP formed is more lenticular in the transverse direction. Variations in the shape of the QGP due to the collision centrality result in pressure gradients that further cause azimuthal anisotropies in the momentum distribution of the produced particles. 
