--- a/jets.tex
+++ b/jets.tex
@@ -1,1 +1,6 @@
 % !TEX root = thesis-ex.tex
+
+
+Hard scatterings in the colliding nuclei result in the production of highly energetic partons that evolve, decay, and eventually form sprays of particles called jets. These are discussed in Section~\ref{sec:jets}. 
+
+
