--- a/qcd.tex
+++ b/qcd.tex
@@ -11,15 +11,11 @@ The Standard Model (SM) \cite{Gaillard:1998ui} describes the interactions betwee
 
 
 
-Within the SM, the dynamics of the strong interactions involving quarks and gluons are described by Quantum Chromodynamics (QCD), a gauge theory with SU(3) symmetry. Quarks are fermions with a spin of $1/2$, and carry a fractional electric charge as well as a color charge. They all have mass and come in six flavors: up, down, top, bottom, strange, charm. The lightest quarks (u and d) combine and form stable particles, while the heavier quarks can only be produced in energetic environments and decay rapidly. Gluons are gauge bosons (force carriers) with a spin of $1$, and are what hold quarks together.
-
-The dynamics of the quarks and gluons are described by the QCD Lagrangian given as \cite{Beringer:1481544}:
+Within the SM, the dynamics of the strong interactions involving quarks and gluons are described by Quantum Chromodynamics (QCD), a gauge theory with SU(3) symmetry. Quarks are fermions with a spin of $1/2$, and carry a fractional electric charge as well as a color charge. They all have mass and come in six flavors: up, down, top, bottom, strange, charm. The lightest quarks (u and d) combine and form stable particles, while the heavier quarks can only be produced in energetic environments and decay rapidly. Gluons are gauge bosons (force carriers) with a spin of $1$, and are what hold quarks together. The dynamics of the quarks and gluons are described by the QCD Lagrangian given as \cite{Beringer:1481544}:
 
 \begin{align}
 \mathcal{{L}}_{\mathrm{QCD}} = \sum_q \bar{\psi}_{q,a} (i \gamma^\mu \partial_\mu \delta_{ab} - g_s \gamma^\mu t_{ab}^C \mathcal{A}_\mu^C - m_q \delta_{ab}) \psi_{q,b} - \frac{1}{4} F_{\mu\nu}^A F^{A \mu\nu}
 \end{align}
-
-
 where $\psi_{q,a}$ and $\psi_{q,b}$ are quark-filed spinors for a quarks with flavor $q$, mass $m_q$, and color $a$ and $b$ respectively, with the values for $a$ and $b$ ranging  from 1 to 3 (for the three colors). The $\mathcal{A_\mu^C}$ corresponds to the gluon field with $C$ taking values from 1 through 8 (for the 8 types of gluons). The $t_{ab}^C$ corresponds to the Gell-Mann matrices that are the generators of the SU(3) group, and dictate the rotation of the quarks color in SU(3) space when it interacts with a gluon. The coupling constant is encoded within $g_s$, which is defined by $g_s \equiv \sqrt{4 \pi \alpha_s}$. The field tensor $F_{\mu\nu}^A$ can be written in terms of the structure constants of the SU(3) group $f_{ABC}$, and is given by:
 
 \begin{align}
