--- a/theory.tex
+++ b/theory.tex
@@ -7,7 +7,7 @@ This section shall discuss the theoretical background necessary to understand je
 \label{sec:qcd}
 \input{qcd.tex}
 
-\section{Quark Gluon Plasma}
+\section{Quark Gluon Plasma in Heavy Ion Collisions}
 \label{sec:qgp}
 \input{qgp.tex}
 
